<resources>
    <string name="app_name">轻心搜</string>
    <!--包含敏感词，还是改了吧-->
    <string name="app_name_old">原：搜你妹</string>
    <string name="music_service_name">轻心搜后台播放服务</string>
    <string name="setting_label">设置</string>
    <string name="select_source_label">选择搜索来源</string>

    <string name="about_author">作者：de得得de</string>
    <string name="about_github">
        Github&lt;br/&gt;
        &lt;a href=&quot;https://github.com/hushenghao/sonimei-music&quot;&gt;https://github.com/hushenghao/sonimei-music&lt;/a&gt;
    </string>
    <string name="about_group">
        🐧🐧群&lt;br/&gt;
        &lt;a href=&quot;https://jq.qq.com/?_wv=1027&amp;k=58sVWJP&quot;&gt;296513604&lt;/a&gt;&lt;br/&gt;
        &lt;a href=&quot;https://jq.qq.com/?_wv=1027&amp;k=5liAgW0&quot;&gt;451745602&lt;/a&gt;
    </string>
    <string name="about_version">版本：%1$s(%2$d)</string>
    <string name="about_market">喜欢，给个好评</string>
    <string name="about_msg">本项目仅供学习交流，禁止用于任何商业用途！</string>

    <string name="net_error">网络开小差儿！</string>

    <string name="empty_help">
    &lt;div&gt;
        &lt;h4&gt;帮助：&lt;/h4&gt;
        &lt;a&gt;&lt;b&gt;粗体&lt;/b&gt;为&lt;b&gt;音乐ID&lt;/b&gt;，&lt;u&gt;下划线&lt;/u&gt;表示&lt;b&gt;音乐地址&lt;/b&gt;&lt;/a&gt;
        &lt;br/&gt;
        &lt;a&gt;• 蜻蜓FM的音乐ID需要使用|(管道符)组合，例如158696|5266259&lt;/a&gt;
        &lt;br/&gt;
        &lt;a&gt;• 全民K歌的音乐名称请输入shareuid，这是用户的uid，搜索结果是该用户的所有公开作品&lt;/a&gt;
        &lt;br/&gt;
        &lt;a&gt;• 全民K歌的音乐ID请输入shareid，这是单曲分享id，搜索结果是该单曲信息&lt;/a&gt;
        &lt;div/&gt;
            &lt;a&gt;&lt;span&gt;网易：&lt;/span&gt;&lt;u&gt;http://music.163.com/#/song?id=&lt;b&gt;25906124&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;QQ：&lt;/span&gt;&lt;u&gt;http://y.qq.com/n/yqq/song/&lt;b&gt;002B2EAA3brD5b&lt;/b&gt;.html&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;酷狗：&lt;/span&gt;&lt;u&gt;http://www.kugou.com/song/#hash=&lt;b&gt;08228af3cb404e8a4e7e9871bf543ff6&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;酷我：&lt;/span&gt;&lt;u&gt;http://www.kuwo.cn/yinyue/&lt;b&gt;382425&lt;/b&gt;/&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;虾米：&lt;/span&gt;&lt;u&gt;http://www.xiami.com/song/&lt;b&gt;2113248&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;百度：&lt;/span&gt;&lt;u&gt;http://music.baidu.com/song/&lt;b&gt;266069&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;一听：&lt;/span&gt;&lt;u&gt;http://www.1ting.com/player/b6/player_&lt;b&gt;357838&lt;/b&gt;.html&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;咪咕：&lt;/span&gt;&lt;u&gt;http://music.migu.cn/v2/music/song/&lt;b&gt;477803&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;荔枝：&lt;/span&gt;&lt;u&gt;http://www.lizhi.fm/1947925/&lt;b&gt;2498707770886461446&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;蜻蜓：&lt;/span&gt;&lt;u&gt;http://www.qingting.fm/channels/&lt;b&gt;158696&lt;/b&gt;/programs/&lt;b&gt;5266259&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;喜马拉雅：&lt;/span&gt;&lt;u&gt;http://www.ximalaya.com/51701370/sound/&lt;b&gt;24755731&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;全民K歌(shareuid)：&lt;/span&gt;&lt;u&gt;http://kg.qq.com/node/personal?uid=&lt;b&gt;619a958c25283e88&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;全民K歌(shareid)：&lt;/span&gt;&lt;u&gt;https://kg.qq.com/node/play?s=&lt;b&gt;FA3h1gFhd6Vk7Ft4&lt;/b&gt;&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;5sing原创：&lt;/span&gt;&lt;u&gt;http://5sing.kugou.com/yc/&lt;b&gt;3082899&lt;/b&gt;.html&lt;/u&gt;&lt;/a&gt;
            &lt;br/&gt;
            &lt;a&gt;&lt;span&gt;5sing翻唱：&lt;/span&gt;&lt;u&gt;http://5sing.kugou.com/fc/&lt;b&gt;14369766&lt;/b&gt;.html&lt;/u&gt;&lt;/a&gt;
        &lt;/div&gt;
    &lt;/div&gt;
    </string>
    <string name="source_type">搜索来源和类型</string>
    <string name="no_lrc">暂无歌词</string>
    <string name="default_all_time">--:--</string>
    <string name="default_now_time">00:00</string>
    <string name="search_name">音乐名称</string>
    <string name="search_id">音乐ID</string>
    <string name="search_url">音乐地址</string>
    <!--menu-->
    <string name="menu_search">聚合搜索</string>
    <string name="menu_source_type">搜索来源和类型</string>
    <string name="menu_setting">设置</string>
    <string name="menu_ape">无损音乐下载</string>
    <string name="menu_webview">网页版</string>
    <string name="menu_about">关于</string>
    <!--setting-->
    <string name="setting_group_search">搜索</string>
    <string name="setting_search_source">默认搜索来源</string>
    <string name="setting_group_down">下载选项</string>
    <string name="setting_down_wifionly">仅在Wi-Fi下下载</string>
    <string name="setting_down_path">自定义下载路径</string>
    <string name="setting_group_other">其他</string>
    <string name="setting_other_debug_sum">意见反馈</string>

    <string name="permission_sd_error">读写SD卡权限被拒绝</string>
    <string name="download_file_downed">文件已经下载过了…</string>
    <string name="download_isdownloading">已经正在下载了…</string>
    <string name="download_haslinked">已经在下载队列了…</string>
    <string name="download_link_empty">下载链接为空</string>
    <string name="download_onlywifi">已开启仅Wi-Fi下载…</string>
    <string name="download_start">即将开始下载 %1$s</string>
    <string name="download_path_error">自定义下载位置不可用，使用默认位置</string>

    <string name="sure">确定</string>
    <string name="play_path_empty">播放链接为空</string>
    <string name="reclick_exit">再按一次退出</string>
    <string name="clear_his">清空搜索历史</string>

    <string name="dialog_option">选项</string>
    <string-array name="dialog_items">
        <item>播放</item>
        <item>添加到播放列表</item>
        <item>下载</item>
        <item>复制下载链接</item>
        <item>复制音乐链接</item>
    </string-array>

    <string name="toast_has_in_list">已经添加过播放列表了</string>

    <string name="copy_empty">内容为空</string>
    <string name="copy_succ">已复制到剪切板</string>
    <string name="source_error"><![CDATA[&nbsp;&nbsp;&nbsp;(QAQ)资源不可用！]]></string>
    <string name="app_crash">喵，很抱歉，程序出现异常，即将退出！</string>

    <string name="play_mode_order">顺序播放</string>
    <string name="play_mode_single">单曲循环</string>
    <string name="play_mode_random">随机播放</string>
    <string name="play_error">播放错误 (%1$d)</string>

    <string name="play_list_title">播放列表</string>
    <string name="play_list_count">共(%1$d)首</string>

    <string name="email">dede.hu@qq.com</string>
    <string name="emile_theme">轻心搜问题反馈</string>
    <string name="email_text">输入您的建议、意见或者使用中的问题，如果反馈问题最好注明版本和复现步骤</string>
    <string name="email_chooser">发送反馈邮件</string>
    <string name="dialog_bug_report">是否将最近的应用日志作为附件发送</string>
    <string name="dont_send">不发送</string>
    <string name="do_send">发送</string>
    <string name="chooser_browser">选择浏览器打开</string>
    <string name="chooser_market">选择应用市场</string>

    <string name="play_notification_name">音乐播放通知</string>
    <string name="notify_last">上一首</string>
    <string name="notify_next">下一首</string>
    <string name="notify_play">播放</string>
    <string name="notify_pause">暂停</string>

    <!-- %[index$][标识][最少宽度][.精度]转换方式 -->
    <string name="toast_play_steep">%1$-2.1f倍速度播放</string>
    <string name="play_steep">%1$-2.1fx</string>

    <string name="label_open_source">开源许可</string>
    <string name="return_parent_dir">…返回上级目录</string>
    <string name="toast_root_dir">已经到最上层目录了</string>
    <string name="label_file_selector">选择路径</string>
    <string name="label_local_music">本地音乐</string>
    <string name="toast_local_music">本地音频无需下载</string>
    <string name="local_music_empty">没有找到本地音乐</string>
    <string name="label_ignore_manager">扫描设置</string>
    <string name="ignore_music_file">过滤小于60s的音频文件</string>
    <string name="file_path_filter">文件路径过滤</string>
    <string name="file_long_filter">文件时长过滤</string>
    <string name="menu_filter_file">本地扫描设置</string>
    <string name="add_ignore_path">添加路径</string>
    <string name="load_play_path_error">加载播放链接出错</string>
</resources>
