<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:persistent="true"
    android:title="@string/setting_label">

    <PreferenceCategory android:title="@string/setting_group_search">
        <Preference
            android:key="default_search_source"
            android:title="@string/setting_search_source" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="download_setting"
        android:title="@string/setting_group_down">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="wifi_download"
            android:title="@string/setting_down_wifionly" />

        <Preference
            android:key="custom_path"
            android:title="@string/setting_down_path" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_group_other">

        <Preference
            android:key="bug_report"
            android:title="@string/setting_other_debug_sum" />

        <Preference
            android:key="qq_group"
            android:title="@string/menu_about" />
    </PreferenceCategory>
</PreferenceScreen>
