<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search_net"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/menu_source_type"
        android:icon="@drawable/ic_menu_source"
        android:title="@string/menu_source_type"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_ape"
        android:title="@string/menu_ape"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_webview"
        android:title="@string/menu_webview"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>